feat/refacto: Refacto userservice and videogame service; Add /me route to get the current connected user, add it to the front
