# videogame-service/src/routes/wishlist.ts
@@ -4,7 +4,6 @@ import authMiddleware from '../middleware/authToken'
 
 const wishlistRoutes = express.Router()
 
-wishlistRoutes.get('/', authMiddleware, wishlistController.getUserGamelists)
 wishlistRoutes.get('/my', authMiddleware, wishlistController.getUserWishlist)
 wishlistRoutes.post('/', authMiddleware, wishlistController.addGameToList)
 
